MDEV-6965 non-captured group \2 in regexp_replace